dizquetv/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dizquetv
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dizquetv
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dizquetv
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Detroit
        image: vexorian/dizquetv
        imagePullPolicy: Always
        name: dizquetv
        ports:
        - containerPort: 8000
          name: dizquetv
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/app/.dizquetv
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dizquetv-data
