dizquetv/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dizquetv
    kubernetes.io/name: dizquetv
  name: dizquetv
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: dizquetv
    nodePort: 8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: dizquetv
  sessionAffinity: None
  type: NodePort
